<?xml version="1.0" encoding="utf-8" ?>

<resources>
    <string name="app_name">DI em Crianças</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Início</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="o_que_di">O que é DI ?</string>
    <string name="saiba_mais">Saiba mais</string>
    <string name="di_em_crian_as">DI em Crianças</string>
    <string name="criancasbrimcando">Criancasbrimcando</string>
    <string name="alguns_tutoriais">Alguns tutoriais</string>
    <string name="alguns_v_deos">Alguns vídeos</string>
    <string name="bhgubuhbuhb">bhgubuhbuhb</string>
    <string name="as">AS</string>
    <string name="antsuc">Antecessores e Sucessores</string>
    <string name="mais">Mais...</string>
    <string name="alguns_tutoriais2">Alguns tutoriais...</string>
    <string name="aprend_crianca">Este brinquedo auxiliará no aprendizado da criança...</string>
    <string name="nomebrinquedo">O nome do brinquedo já diz né ?</string>
    <string name="alfabeto_divertido">Alfabeto divertido</string>
    <string name="alfdiv">alfabtdiv</string>
    <string name="nomediz">O nome do brinquedo já diz né...</string>
    <string name="este_brinquedo_tem_o_objetivo_de_auxiliar_o_desenvolvimento_l_gico_da_crian_a">Este brinquedo tem o objetivo de auxiliar o desenvolvimento lógico da criança</string>
    <string name="jogovelha">TODO</string>
    <string name="jogo_da_velha">Jogo da Velha</string>
</resources>