<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#E3D2F4"
            tools:context=".ui.home.HomeFragment">

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="503dp"
                android:layout_height="168dp"
                android:layout_marginBottom="568dp"
                android:contentDescription="@string/criancasbrimcando"
                android:isScrollContainer="false"
                android:scaleType="fitXY"
                android:scaleX="1"
                android:scaleY="1"
                android:src="@drawable/criancabrinc"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.184"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

            <TextView
                android:id="@+id/text_home2"
                android:layout_width="166dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#D5B0A5"
                android:text="@string/o_que_di"
                android:textAlignment="center"
                android:textColor="#616161"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageButton2"
                app:layout_constraintVertical_bias="0.097" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saiba_mais"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_home2"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/backgroundcontainer"
                android:layout_width="429dp"
                android:layout_height="59dp"
                android:background="#9370DB"
                android:textAlignment="center"
                android:textColorLink="#9370DB"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button3"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/backgroundcontainer3"
                android:layout_width="455dp"
                android:layout_height="517dp"
                android:background="#EFABD8"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backgroundcontainer"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/backgroundcontainer5"
                android:layout_width="382dp"
                android:layout_height="133dp"
                android:background="#FFFFFF"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backgroundcontainer4"
                app:layout_constraintVertical_bias="0.112" />

            <TextView
                android:id="@+id/backgroundcontainer7"
                android:layout_width="382dp"
                android:layout_height="133dp"
                android:background="#FFFFFF"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backgroundcontainer4"
                app:layout_constraintVertical_bias="0.844" />

            <TextView

                android:id="@+id/backgroundcontainer4"
                android:layout_width="382dp"
                android:layout_height="133dp"
                android:background="#ffff"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.413"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/backgroundcontainer"
                app:layout_constraintVertical_bias="0.073" />

            <Button
                android:id="@+id/button"
                android:layout_width="66dp"
                android:layout_height="41dp"
                android:backgroundTint="#66CDAA"
                android:text="@string/mais"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.939"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.085"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/button2"
                android:layout_width="66dp"
                android:layout_height="41dp"
                android:backgroundTint="#66CDAA"
                android:text="@string/mais"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.942"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.484"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/button4"
                android:layout_width="66dp"
                android:layout_height="41dp"
                android:backgroundTint="#66CDAA"
                android:text="@string/mais"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.939"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView4"
                app:layout_constraintVertical_bias="0.909"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="174dp"
                android:layout_height="110dp"
                android:contentDescription="@string/as"
                android:src="@drawable/antecessorsucessor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/backgroundcontainer4"
                app:layout_constraintVertical_bias="0.029" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="134dp"
                android:layout_height="46dp"
                android:text="@string/antsuc"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.812"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.079" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="134dp"
                android:layout_height="46dp"
                android:text="@string/alfabeto_divertido"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.812"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.432" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="128dp"
                android:layout_height="28dp"
                android:text="@string/jogo_da_velha"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.795"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintVertical_bias="0.734" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="183dp"
                android:layout_height="52dp"
                android:text="@string/aprend_crianca"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.413"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/backgroundcontainer"
                app:layout_constraintVertical_bias="0.183" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="170dp"
                android:layout_height="56dp"
                android:text="@string/nomediz"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.309"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/backgroundcontainer"
                app:layout_constraintVertical_bias="0.532" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="344dp"
                android:layout_height="38dp"
                android:fontFamily="serif"
                android:text="@string/alguns_tutoriais"
                android:textAlignment="center"
                android:textColor="#9370DB"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button3"
                app:layout_constraintVertical_bias="0.045" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="344dp"
                android:layout_height="38dp"
                android:fontFamily="serif"
                android:text="@string/alguns_tutoriais2"
                android:textAlignment="center"
                android:textColor="#2E0F60"
                android:textColorLink="#9370DB"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.567"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button3"
                app:layout_constraintVertical_bias="0.031" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="174dp"
                android:layout_height="110dp"
                android:contentDescription="@string/alfdiv"
                android:src="@drawable/alfabetodiv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.105"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/backgroundcontainer5"
                app:layout_constraintVertical_bias="0.055" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="143dp"
                android:layout_height="117dp"
                android:contentDescription="@string/jogovelha"
                android:src="@drawable/jogovelha"
                app:layout_constraintBottom_toBottomOf="@+id/backgroundcontainer3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.093"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/backgroundcontainer7"
                app:layout_constraintVertical_bias="0.209" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="193dp"
                android:layout_height="55dp"
                android:text="@string/este_brinquedo_tem_o_objetivo_de_auxiliar_o_desenvolvimento_l_gico_da_crian_a"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.844"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/backgroundcontainer7"
                app:layout_constraintVertical_bias="0.306" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</ScrollView>